kubernetes/my-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-detection-api-deployment
  labels:
    app: fraud-detection-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fraud-detection-api
  template:
    metadata:
      labels:
        app: fraud-detection-api
    spec:
      containers:
      - name: api
        image: sanorf/fraud-detection-api:latest
        ports:
        - containerPort: 8000
