kubernetes/my-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-api-service
  labels:
    app: fraud-detection-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fraud-detection-api
