kubernetes/my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-detection-api-ingress
spec:
  defaultBackend:
    service:
      name: fraud-detection-api-service
      port:
        number: 8000
